# rustc-test

./: Cargo.toml  build.rs
src/: lib.rs
