[package]
name = "rustc-test"
version = "0.3.0"
authors = ["The Rust Project Developers"]
license = "MIT OR Apache-2.0"
description = "A fork of Rust’s `test` crate that doesn’t require unstable language features."
repository = "https://github.com/SimonSapin/rustc-test"

[features]
asm_black_box = []
capture = []

[dependencies]
libc = "0.2"
getopts = "0.2"
rustc-serialize = "0.3"
term = "0.4"
time = "0.1"

[build-dependencies]
rustc_version = "0.2.1"
